--- a/app-public/src/app/admin/admin-interview/admin-display-interview/admin-display-interview.component.html
+++ b/app-public/src/app/admin/admin-interview/admin-display-interview/admin-display-interview.component.html
@@ -2,9 +2,9 @@
     <div class="ui card" id="interview-card">
     	<div class="image-container">
     		<div  class="center floated upload-image" style="text-align: center">
-    			<button class="ui icon button" (click)="onViewClicked()" style="text-align: center"><i class="fluid tiny eye icon"></i></button>
-    			<button class="ui icon button" (click)="onEditButtonClicked()"><i class="fluid tiny write icon"></i></button>
-    			<button class="ui icon button" (click)="onDeleteClicked()"><i class="fluid tiny trash icon">
+    			<button class="ui blue icon button" (click)="onViewClicked()" style="text-align: center"><i class="fluid tiny eye icon"></i></button>
+    			<button class="ui green icon button" (click)="onEditButtonClicked()"><i class="fluid tiny write icon"></i></button>
+    			<button class="ui red icon button" (click)="onDeleteClicked()"><i class="fluid tiny trash icon">
     			</i></button>
     		</div>			
     	</div>	
