--- a/app-public/src/app/admin/admin-podcast/admin-podcast.component.html
+++ b/app-public/src/app/admin/admin-podcast/admin-podcast.component.html
@@ -48,7 +48,7 @@
     			</div>
     		</div>
     	</div>
-    	<div class="articles-list">
+    	<div class="articles-list" style="margin-top:4vh;">
     		<div class="ui grid six column" >
                 
                     <div class="column" id="article-card" *ngFor="let podcast of podcasts" style="padding-top: 1vh;padding-bottom: 1vh;">
