--- a/app-public/src/app/public/public-base/public-base.component.html
+++ b/app-public/src/app/public/public-base/public-base.component.html
@@ -2,7 +2,7 @@
 <div class="ui top attached menu" style="border-radius: 0px;">
   <div class="left menu" style="margin-left: 8vw;">
   	<a class="item"></a>
-    <a class="item" >
+    <a class="item header" >
   	  <p>Independent <br>Anonymous<br></p>	
     </a>
   </div>
