--- a/app-public/src/app/public/public-podcast/podcast-display/podcast-display.component.html
+++ b/app-public/src/app/public/public-podcast/podcast-display/podcast-display.component.html
@@ -2,7 +2,7 @@
 	<div class="ui grid">
 		<div class="row">
 			<div class="four wide column" style="border-right: solid 2px;">
-				<a href="https://google.com" class="ui medium image">
+				<a href="https://google.com" class="ui small image">
 					<img src="{{imageUrl}}" class="fluid">
 				</a>
 			</div>
@@ -13,7 +13,7 @@
 					    <span class="date">{{ podcast.date_posted | date:"short"}} |</span>
 					    <span class="time">{{ podcast.file.length }}min</span>
 				    </div>
-				    <div class="description">
+				    <div class="description" style="margin-top: 3vh;">
 				    	{{podcast.description}}
 				    </div>
 				</div>
