--- a/app-public/src/app/public/public-review/article-display/article-display.component.html
+++ b/app-public/src/app/public/public-review/article-display/article-display.component.html
@@ -5,8 +5,8 @@
 		</a>
 		<div class="ui grid">
 			<div class="row">
-				<div class="fifteen wide column">
-					<div class="ui divider"></div>
+				<div class="fifteen wide column left floated">
+					<hr class="" style="margin-left:0vw;">
 					<p class="meta">
 						{{ article.tag }}
 					</p>
