--- a/app-public/src/app/admin/admin-podcast/admin-display-podcast/admin-display-podcast.component.html
+++ b/app-public/src/app/admin/admin-podcast/admin-display-podcast/admin-display-podcast.component.html
@@ -2,8 +2,8 @@
     <div class="ui card" id="podcast-card">
     	<div class="image-container">
     		<div  class="center floated upload-image" style="text-align: center">
-    			<button class="ui icon button left floated" (click)="onEditButtonClicked()" ><i class="fluid tiny write icon"></i></button>
-    			<button class="ui icon button right floated" (click)="onDeleteClicked()"><i class="fluid tiny trash icon">
+    			<button class="ui blue icon button left floated" (click)="onEditButtonClicked()" style="margin:1vh;"><i class="fluid tiny write icon"></i></button>
+    			<button class="ui red icon button right floated" (click)="onDeleteClicked()" style="margin-right:1vh;margin-top:1vh;"><i class="fluid tiny trash icon">
     			</i></button>
     		</div>			
     	</div>	
