--- a/app-public/src/app/admin/admin-sidebar/admin-sidebar.component.html
+++ b/app-public/src/app/admin/admin-sidebar/admin-sidebar.component.html
@@ -1,8 +1,4 @@
 <div class="ui labeled icon vertical sidebar menu" style="width: 14vh">
-    <a class="item" routerLink = "/admin/home">
-      <i class="home icon"></i>
-      Home
-    </a>
     <a class="item" routerLink = "/admin/article">
       <i class="file alternate icon"></i>
       Articles
@@ -18,5 +14,7 @@
     <a class="item" routerLink = "/admin/analytics">
       <i class="chart line icon"></i>
       Analytics
+    </a>
+    <a class="item" style="margin-top:100%;">
     </a>
  </div>
