--- a/app-public/src/app/public/public-interview/interview-display/interview-display.component.css
+++ b/app-public/src/app/public/public-interview/interview-display/interview-display.component.css
@@ -1,25 +1,27 @@
 .card{
 	border-radius: 0px;
+	border: groove 5px rgb(6,58,122,.8) ;
+	
 }
 .cont
 .extra{
 	padding: 2vh;
 }
+
+.image img{
+	max-height:31vh;
+	min-height:30vh;
+}
 .meta{
 	margin-bottom: 2vh; 
 	padding-top: 1vh;
+	font-weight: bold;
 }
 .header{
 	margin-top:2vh;
 	margin-bottom: 2vh;  
 }
-.image{ 
-	height: 100%;
-	width:100%; 
-}
-.img-fit{
-	object-fit: fill;
-}
+
 .extra{
 	margin-bottom: 0vh;
 }
