--- a/app-public/src/app/public/public-interview/interview-watch/interview-watch.component.css
+++ b/app-public/src/app/public/public-interview/interview-watch/interview-watch.component.css
@@ -5,5 +5,28 @@
 }
 .meta{
 	padding-top: 2vh;
-	border-bottom: solid 20px black;
+	border-bottom: solid 20px #063a7a;
+}
+.medium img{
+	max-height: 25vh;
+}
+
+
+.footer{
+	margin-top:29%; 
+	padding-bottom: 3vh;
+	padding-top: 2vh;
+	background-color: black;
+	color:white; 
+	height: 20vh;
+	border-bottom: 3px white solid; 
+	bottom: 0;
+}
+
+.footer-title{
+	background-color:white !important;
+	color: black !important;
+	font-family: 'Nunito';
+	font-weight: bold;
+	font-size: 3vh;
 }
