--- a/app-public/src/app/public/public-podcast/public-podcast.component.css
+++ b/app-public/src/app/public/public-podcast/public-podcast.component.css
@@ -2,7 +2,17 @@
 	margin-left: 10vw;
 	margin-right:5vw;
 }
-
+.review-section{
+	margin-top: 2vh;
+}
+#review-row{
+	border-top:solid 4px #063a7a; 
+	background-color: #063a7a; 
+	border-bottom:solid 4px #063a7a;
+	margin-top: 1vh;
+	color: white;
+	opacity: 0.9;
+}
 .review-section,
 .pod-section{
 	margin-left: 11vw;
@@ -10,11 +20,26 @@
 .review-hr{
 
 }
+.hide-footer{
+	display: none;
+}
 
 .interview-display{
 	margin-top: 2vh;
 }
 
-#review-row{
-	height: 8vh !important;
+footer{
+	margin-top: 2vh;
+	padding-bottom: 3vh;
+	padding-top: 2vh;
+	background-color: black;
+	color:white; 
+	height: 20vh;
+	border-bottom: 3px white solid; 
+}
+
+.footer-title{
+	background-color:white !important;
+	color: black !important;
+	font-weight: bold;
 }
