--- a/app-public/src/app/public/public-podcast/public-podcast.component.html
+++ b/app-public/src/app/public/public-podcast/public-podcast.component.html
@@ -1,5 +1,5 @@
 <app-public-base></app-public-base>
-<hr class="review-hr">
+
 <div class="ui grid" id="review-row">
 		<div class="row">
 			<div class="sixteen wide column ">
@@ -7,14 +7,50 @@
 			</div>
 		</div>
 </div>
-<hr>
+
 <div class="pod-section">
 	<div class="ui grid">
 		<div class="row">
-			<div class="eleven wide column" style="margin-left:7.5vw;" *ngFor="let podcast of podcasts">
+			<div class="eleven wide column" style="margin-top: 2vh;margin-left:7.5vw;border-bottom:2px solid;" *ngFor="let podcast of podcasts">
 				<app-podcast-display [podcast]="podcast"></app-podcast-display>
-				<hr>
 			</div>
 		</div>
 	</div>
 </div>
+<footer class="ui footer hide-footer" id="footer">
+      <div class="right menu" >
+    	    <div class="ui grid row">
+    	    	<div class="two wide column center floated footer-title" style="margin-left: 10.5vw;height:20vh;">
+    	    		<a class="">
+  	                  <p style="padding-top: 5vh;color: black;">Independent <br>Anonymous<br></p>	
+                    </a>
+    	    	</div>
+    	    	<div class="six wide column right floated" style="padding-right: 10.5vw;border-left: solid 3px #063a7a;padding-top: 3vh;">
+					
+					<div class="ui grid row center floated">
+					<div class="four wide column">
+						<div class="icon-wrapper" >
+							<i class="ui huge facebook icon"></i>
+						</div>
+					</div>
+					<div class="four wide column">
+						<div class="icon-wrapper">
+							<i class="ui huge twitter icon"></i>
+						</div>	
+					</div>
+					<div class="four wide column">
+						<div class="icon-wrapper">
+							<i class="ui huge instagram icon"></i>
+						</div>
+					</div>
+					<div class="four wide column">
+						<div class="icon-wrapper">
+							<i class="ui huge google icon"></i>
+						</div>
+					</div>
+				    </div>
+			    </div>
+
+            </div>
+    </div>
+</footer>
