--- a/app-public/src/app/public/public-review/public-review.component.css
+++ b/app-public/src/app/public/public-review/public-review.component.css
@@ -1,15 +1,38 @@
 .section{
 	margin-left: 8vw;
 	margin-right:8vw;
+	
 }
 
 .review-section{
 	margin-left: 11vw;
-}
-.review-hr{
-
+	margin-top: 2vh;
 }
 
 #review-row{
-	height: 8vh !important;
+	border-top:solid 4px #063a7a; 
+	background-color: #063a7a; 
+	border-bottom:solid 4px #063a7a;
+	margin-top: 1vh;
+	color: white;
+	opacity: 0.9;
+}
+.hide-footer{
+	display: none;
+}
+
+footer{
+	padding-bottom: 3vh;
+	padding-top: 2vh;
+	background-color: black;
+	color:white; 
+	height: 20vh;
+	border-bottom: 3px white solid; 
+}
+
+.footer-title{
+	background-color:white !important;
+	color: black !important;
+	font-family: 'Nunito';
+	font-weight: bold;
 }
