--- a/app-public/src/app/public/public-social/public-social.component.html
+++ b/app-public/src/app/public/public-social/public-social.component.html
@@ -1,5 +1,5 @@
 <app-public-base></app-public-base>
-<hr class="review-hr">
+
 <div class="ui grid" id="review-row">
 		<div class="row">
 			<div class="sixteen wide column ">
@@ -7,7 +7,7 @@
 			</div>
 		</div>
 </div>
-<hr>
+
 <div class="pod-section" >
 	<div class="ui grid">
 		<div class="row">
@@ -32,7 +32,7 @@
 					</div>
 					<div class="four wide column">
 						<div class="icon-wrapper">
-							<i class="ui huge google icon"></i>
+							<i class="ui huge youtube icon"></i>
 						</div>
 					</div>
 				</div>
@@ -86,3 +86,18 @@
 		</div>
 	</div>
 </div>
+<footer class="ui footer">
+      <div class="right menu" >
+    	    <div class="ui grid row">
+    	    	<div class="two wide column center floated footer-title" style="margin-left: 10.5vw;height:20vh;">
+    	    		<a class="">
+  	                  <p style="padding-top: 5vh;color: black;">Independent <br>Anonymous<br></p>	
+                    </a>
+    	    	</div>
+    	    	<div class="six wide column right floated" style="padding-right: 10.5vw;border-left: solid 3px #063a7a;padding-top: 3vh;">
+					
+			    </div>
+
+            </div>
+    </div>
+</footer>
