--- a/app-public/src/styles.css
+++ b/app-public/src/styles.css
@@ -1,1 +1,36 @@
 /* You can add global styles to this file, and also import other style files */
+/* nunito-regular - latin */
+@font-face {
+  font-family: 'Nunito';
+  font-style: normal;
+  font-weight: 400;
+  src: url('assets/fonts/nunito/nunito-v13-latin-regular.eot'); /* IE9 Compat Modes */
+  src: local('Nunito Regular'), local('Nunito-Regular'),
+       url('assets/fonts/nunito/nunito-v13-latin-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+       url('assets/fonts/nunito/nunito-v13-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
+       url('assets/fonts/nunito/nunito-v13-latin-regular.woff') format('woff'), /* Modern Browsers */
+       url('assets/fonts/nunito/nunito-v13-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
+       url('assets/fonts/nunito/nunito-v13-latin-regular.svg#Nunito') format('svg'); /* Legacy iOS */
+}
+
+/* cutive-mono-regular - latin */
+@font-face {
+  font-family: 'Cutive Mono';
+  font-style: normal;
+  font-weight: 400;
+  src: url('assets/fonts/cutive-mono/cutive-mono-v8-latin-regular.eot'); /* IE9 Compat Modes */
+  src: local('Cutive Mono Regular'), local('CutiveMono-Regular'),
+       url('assets/fonts/cutive-mono/cutive-mono-v8-latin-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+       url('assets/fonts/cutive-mono/cutive-mono-v8-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
+       url('assets/fonts/cutive-mono/cutive-mono-v8-latin-regular.woff') format('woff'), /* Modern Browsers */
+       url('assets/fonts/cutive-mono/cutive-mono-v8-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
+       url('assets/fonts/cutive-mono/cutive-mono-v8-latin-regular.svg#CutiveMono') format('svg'); /* Legacy iOS */
+}
+
+h1,h2,h3,h4,h5{
+	font-family:'Nunito';
+}
+
+body{
+	font-family: 'Cutive Mono';
+}
